Closed Bug 1806245 Opened 3 years ago Closed 3 years ago

Crash in [@ nsMsgFilterService::ApplyFilters]

Categories

(MailNews Core :: Filters, defect)

x86
Windows
defect

Tracking

(thunderbird_esr102+ verified, thunderbird109 fixed)

RESOLVED FIXED
110 Branch
Tracking Status
thunderbird_esr102 + verified
thunderbird109 --- fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This first appears with version 102.3.0

Crash report: https://crash-stats.mozilla.org/report/index/fc305500-4e41-4539-b923-ebbbe0221216

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  nsMsgFilterService::ApplyFilters  mailnews/search/src/nsMsgFilterService.cpp:1277
1  xul.dll  NS_InvokeByIndex  
2  xul.dll  static XPCWrappedNative::CallMethod  js/xpconnect/src/XPCWrappedNative.cpp:1125
3  xul.dll  XPC_WN_CallMethod  js/xpconnect/src/XPCWrappedNativeJSOps.cpp:963
4  xul.dll  js::InternalCallOrConstruct  js/src/vm/Interpreter.cpp:507
5  xul.dll  Interpret  js/src/vm/Interpreter.cpp:3314
6  xul.dll  js::RunScript  js/src/vm/Interpreter.cpp:389
7  xul.dll  js::InternalCallOrConstruct  js/src/vm/Interpreter.cpp:539
8  xul.dll  js::Call  js/src/vm/Interpreter.cpp:605
9  xul.dll  JS_CallFunctionValue  js/src/vm/CallAndConstruct.cpp:53

getFilterList() can return null...

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Target Milestone: --- → 110 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/ff81073b03e6
Fix crash in [@ nsMsgFilterService::ApplyFilters]. r=benc

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED

Comment on attachment 9308859 [details]
Bug 1806245 - Fix crash in [@ nsMsgFilterService::ApplyFilters]. r=benc

[Approval Request Comment]
User impact if declined: crash fix
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): very safe

Attachment #9308859 - Flags: approval-comm-esr102?
Attachment #9308859 - Flags: approval-comm-beta?
Whiteboard: [TM:102.7.*]

Comment on attachment 9308859 [details]
Bug 1806245 - Fix crash in [@ nsMsgFilterService::ApplyFilters]. r=benc

[Triage Comment]
Approved for beta

Attachment #9308859 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9308859 [details]
Bug 1806245 - Fix crash in [@ nsMsgFilterService::ApplyFilters]. r=benc

[Triage Comment]
Approved for esr102

Attachment #9308859 - Flags: approval-comm-esr102? → approval-comm-esr102+

v.fixed gone from 102.7.2

Whiteboard: [TM:102.7.*]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: