Bug 1806245 - Fix crash in [@ nsMsgFilterService::ApplyFilters]. r=benc

getFilterList() can return null...

Differential Revision: https://phabricator.services.mozilla.com/D164984

--HG--
extra : rebase_source : 3720bb9d05da10d6446dbfea223997d26e16d83c
extra : amend_source : 6d1733211d76a672e60da2b627b5a051cc5dc5d3